[package]
name = "axum-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
cookie = "0.18.1"
async-trait = "0.1.83"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
chrono = { version = "0.4.38", features = ["serde"] }
mockall = "0.13.1"
diesel = { version = "2.2.5", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
] }
dotenvy = "0.15.7"
anyhow = "1.0.93"
argon2 = "0.5.3"
rand = "0.8.5"
jsonwebtoken = { version = "9", default-features = false }